@@ -1,72 +1,70 @@
 package jwt.Authentication.auth.config;
 
-import java.util.List;
 
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
+import org.springframework.security.config.Customizer;
+import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configuration.WebSecurityConfiguration;
+import org.springframework.security.config.annotation.web.configuration.WebSecurityCustomizer;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.filter.CorsFilter;
 
-import java.util.List;
+import lombok.RequiredArgsConstructor;
+
+import java.util.Collections;
 
 @Configuration
 @EnableWebSecurity
-
+@EnableMethodSecurity
+@RequiredArgsConstructor
 public class SecurityConfig  {
 	
+	@Autowired
+    private JwtAuthenticationEntryPoint authenticationEntryPoint;
 	
-	private final AuthenticationProvider authenticationProvider;
-    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+		http.csrf(AbstractHttpConfigurer::disable);
+        http.authorizeHttpRequests(
+                (requests) -> requests
+                        .anyRequest()
+                        .authenticated())
+                .sessionManagement(management -> management.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .exceptionHandling(exception -> exception.authenticationEntryPoint(authenticationEntryPoint))
+                .httpBasic(Customizer.withDefaults());
+//                .addFilterBefore((Filter) jwtDecoder(), UsernamePasswordAuthenticationFilter.class);
 
-    public SecurityConfig(
-            JwtAuthenticationFilter jwtAuthenticationFilter,
-            AuthenticationProvider authenticationProvider
-    ) {
-        this.authenticationProvider = authenticationProvider;
-        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
+		return http.build();
     }
 
-
-	    @Bean
-	    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-	        http.csrf()
-	                .disable()
-	                .authorizeHttpRequests()
-	                .requestMatchers("/auth/**")
-	                .permitAll()
-	                .anyRequest()
-	                .authenticated()
-	                .and()
-	                .sessionManagement()
-	                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-	                .and()
-	                .authenticationProvider(authenticationProvider)
-	                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
-
-	        return http.build();
-	    }
-
-	    @Bean
-	    CorsConfigurationSource corsConfigurationSource() {
-	        CorsConfiguration configuration = new CorsConfiguration();
-
-	        configuration.setAllowedOrigins(List.of("http://localhost:8080"));
-	        configuration.setAllowedMethods(List.of("GET","POST"));
-	        configuration.setAllowedHeaders(List.of("Authorization","Content-Type"));
-
-	        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-
-	        source.registerCorsConfiguration("/**",configuration);
-
-	        return source;
-	    }
+//    @Bean
+//    public CorsConfigurationSource corsConfigurationSource() {
+//        CorsConfiguration configuration = new CorsConfiguration();
+//        configuration.setAllowedOrigins(Collections.singletonList("*"));
+//        configuration.setAllowedMethods(Collections.singletonList("*")); // Allows all HTTP methods
+//        configuration.setAllowedHeaders(Collections.singletonList("*")); // Allows all headers
+//        configuration.setAllowCredentials(true); // Allow cookies, if needed
+//        
+//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//        source.registerCorsConfiguration("/**", configuration);  // Apply to all endpoints
+//
+//        return source;
+//    }
 	
 //	@Bean
 //	public PasswordEncoder passwordEncoder() {
@@ -87,12 +85,23 @@ public class SecurityConfig  {
 //		
 //	}
 	
+	@Bean
+	public WebSecurityCustomizer configure() {
+		return web -> web.ignoring().requestMatchers("/swagger-ui/*", "/swagger-resources/*", "/webjars/**",
+				"/configuration/ui", "/v3/api-docs/*","/jwtAuthen/*", "/swagger-ui.html", "/api/auth/**", "/login");
+	}
 	
-//	@Bean
-//	public WebSecurityCustomizer webConfig() {
-//		
-//		return web ->web.ignoring().requestMatchers("/login","/anyrequest");
-//	}
+	@Bean
+    CorsFilter corsFilter() {
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowCredentials(true);
+        config.addAllowedOriginPattern("*");
+        config.addAllowedHeader("*"); 
+        config.addAllowedMethod("*");
+        source.registerCorsConfiguration("/**", config);
+        return new CorsFilter(source);
+    }
 	
 	
 	
